--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minimalist debit</title>
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="styles/vendours/bootstrap-reboot.css"/>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
+    <h1>hello</h1>
 </body>
 </html>
