added a mobile menu

--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minimalist debit</title>
-    <link rel="stylesheet" href="styles/vendours/bootstrap-reboot.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
+
 <body>
-    <h1>hello</h1>
+        <h1 class="logo">minimalist debit</h1>
+        <nav class="navbar">
+            <div class="berger">
+                <div class="menu-line line1"></div>
+                <div class="menu-line line2"></div>
+                <div class="menu-line line3"></div>
+            </div>
+            <div class="nav_menu">
+                <ul class="nav_list">
+                    <li class="nav_list_item">
+                        <a href="#" class="nav_list_link">home</a>
+                    </li>
+                    <li class="nav_list_item">
+                        <a href="#" class="nav_list_link">feature</a>
+                    </li>
+                    <li class="nav_list_item">
+                        <a href="#" class="nav_list_link">get a card</a>
+                    </li>
+                    <li class="nav_list_item">
+                        <a href="#" class="nav_list_link">contact us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    <header>
+        <div class="hero container">
+            <h1 class="head-title">Debit Cards for the Real Minimalist</h1>
+            <p class="head-p">With this one card, you can pay whenever and wherever you want.</p>
+            <img class="card-img" src="img/hero2.png" alt="debit card photo">
+            <button class="btn"><a href="#">get a card</a></button>
+        </div>
+    </header>
+
+
+<script src="main.js"></script>
 </body>
+
 </html>
