created feature sectuon

--- a/index.html
+++ b/index.html
@@ -7,48 +7,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minimalist debit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Roboto:wght@100;300;400;500&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
-        <h1 class="logo">minimalist debit</h1>
-        <nav class="navbar">
-            <div class="berger">
-                <div class="menu-line line1"></div>
-                <div class="menu-line line2"></div>
-                <div class="menu-line line3"></div>
-            </div>
-            <div class="nav_menu">
-                <ul class="nav_list">
-                    <li class="nav_list_item">
-                        <a href="#" class="nav_list_link">home</a>
-                    </li>
-                    <li class="nav_list_item">
-                        <a href="#" class="nav_list_link">feature</a>
-                    </li>
-                    <li class="nav_list_item">
-                        <a href="#" class="nav_list_link">get a card</a>
-                    </li>
-                    <li class="nav_list_item">
-                        <a href="#" class="nav_list_link">contact us</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <h1 class="logo">minimalist debit</h1>
+    <nav class="navbar">
+        <div class="berger">
+            <div class="menu-line line1"></div>
+            <div class="menu-line line2"></div>
+            <div class="menu-line line3"></div>
+        </div>
+        <div class="nav_menu">
+            <ul class="nav_list">
+                <li class="nav_list_item">
+                    <a href="#" class="nav_list_link">home</a>
+                </li>
+                <li class="nav_list_item">
+                    <a href="#" class="nav_list_link">feature</a>
+                </li>
+                <li class="nav_list_item">
+                    <a href="#" class="nav_list_link">get a card</a>
+                </li>
+                <li class="nav_list_item">
+                    <a href="#" class="nav_list_link">contact us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <header>
         <div class="hero container">
             <h1 class="head-title">Debit Cards for the Real Minimalist</h1>
             <p class="head-p">With this one card, you can pay whenever and wherever you want.</p>
-            <img class="card-img" src="img/hero2.png" alt="debit card photo">
+            <img class="card-img" src="img/hero1.png" alt="debit card photo">
             <button class="btn"><a href="#">get a card</a></button>
         </div>
     </header>
 
+    <section id="feature">
+        <div class="left">
+            <div class="titles">
+                <h1 class="title">Our Good Features</h1>
+                <div class="title-line"></div>
+            </div>
+            <div class="img">
+                <img src="img/feature1.jpg" alt="photo">
+            </div>
+            <div class="text">
+                <h2 class="feature-head">
+                    No currency exchange fees when used overseas.
+                </h2>
+                <p class="feature-p">If you travel around the world, this is one card you must get. You can use it at
+                    overseas stores without exchange fees.</p>
+            </div>
+        </div>
+        <div class="right">
+            <div class="img">
+                <img src="img/feature2.jpg" alt="photo">
+                <p>designed by freepik.com</p>
+            </div>
+            <div class="text">
+                <h2 class="feature-head">
+                    Applications that make it easy to manage your money </h2>
+                <p class="feature-p">With our application, you can exchange currencies. You can also check the amount
+                    you have spent in real time.</p>
+            </div>
+            <button class="btn"><a href="#">learn more</a></button>
 
-<script src="main.js"></script>
+        </div>
+    </section>
+    <section id="apply">
+        <div class="titles">
+            <h1 class="title">Get minimalist debit in 3 steps</h1>
+            <div class="title-line"></div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="bg">
+                    <img class="send" src="icon/send.svg" alt="send">
+                </div>
+                <h2 class="apply-title">apply</h2>
+                <p class="apply-p">
+                    No screening required.
+                    Free card issuance.
+                    Register your email address and fill out the application form.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
