added apply section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <a href="#" class="nav_list_link">home</a>
                 </li>
                 <li class="nav_list_item">
-                    <a href="#" class="nav_list_link">feature</a>
+                    <a href="#feature" class="nav_list_link">feature</a>
                 </li>
                 <li class="nav_list_item">
-                    <a href="#" class="nav_list_link">get a card</a>
+                    <a href="#apply" class="nav_list_link">get a card</a>
                 </li>
                 <li class="nav_list_item">
                     <a href="#" class="nav_list_link">contact us</a>
@@ -89,13 +89,32 @@
         <div class="cards">
             <div class="card">
                 <div class="bg">
-                    <img class="send" src="icon/send.svg" alt="send">
+                    <img class="icon" src="icon/send.svg" alt="send-icon">
                 </div>
                 <h2 class="apply-title">apply</h2>
                 <p class="apply-p">
                     No screening required.
                     Free card issuance.
                     Register your email address and fill out the application form.
+                </p>
+            </div>
+            <div class="card">
+                <div class="bg">
+                    <img class="icon" src="icon/card.svg" alt="card-icon">
+                </div>
+                <h2 class="apply-title">receive</h2>
+                <p class="apply-p">
+                    Register your card with the app and make a deposit.You can deposit money to this card not only from
+                    e-transfor but also from your credit card.
+                </p>
+            </div>
+            <div class="card">
+                <div class="bg">
+                    <img class="icon" src="icon/money.svg" alt="money-icon">
+                </div>
+                <h2 class="apply-title">use</h2>
+                <p class="apply-p">
+                    Can be used for online shopping, payment, and overseas travel. You can reduce your luggage.
                 </p>
             </div>
         </div>
