added form secrion

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="cards">
             <div class="card">
                 <div class="bg">
-                    <img class="icon" src="icon/send.svg" alt="send-icon">
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
                 </div>
                 <h2 class="apply-title">apply</h2>
                 <p class="apply-p">
@@ -100,7 +100,7 @@
             </div>
             <div class="card">
                 <div class="bg">
-                    <img class="icon" src="icon/card.svg" alt="card-icon">
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z"/></svg>
                 </div>
                 <h2 class="apply-title">receive</h2>
                 <p class="apply-p">
@@ -110,7 +110,7 @@
             </div>
             <div class="card">
                 <div class="bg">
-                    <img class="icon" src="icon/money.svg" alt="money-icon">
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"/></svg>
                 </div>
                 <h2 class="apply-title">use</h2>
                 <p class="apply-p">
@@ -118,7 +118,22 @@
                 </p>
             </div>
         </div>
-
+    </section>
+    <section id="form">
+        <div class="titles">
+            <h1 class="title">Get special experiences</h1>
+            <div class="title-line"></div>
+        </div>
+        <div class="get-card">
+        <div class="img">
+            <img src="img/apply.jpg" alt="photo">
+        </div>
+        <h2 class="form-head">
+            Enter your email address and click the button.
+        </h2>
+        <input class="mail" type="email">
+        <submit class="btn">get a card</submit>
+    </div>
     </section>
 
     <script src="main.js"></script>
