added JS menu toggle function

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </ul>
         </div>
     </nav>
+    <div class="wrap">
     <header>
         <div class="hero container">
             <h1 class="head-title">Debit Cards for the Real Minimalist</h1>
@@ -172,7 +173,7 @@
     </div>
     </footer>
 
-
+</div>
     <script src="main.js"></script>
 </body>
 
