done with laptop markup

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </header>
 
         <section id="feature">
+            <div class="titles">
+                <h1 class="title">Our Good Features</h1>
+                <div class="title-line"></div>
+            </div>
             <div class="left">
-                <div class="titles">
-                    <h1 class="title">Our Good Features</h1>
-                    <div class="title-line"></div>
-                </div>
                 <div class="img">
                     <img src="img/feature1.jpg" alt="photo">
                 </div>
@@ -79,8 +79,8 @@
                     <p class="feature-p">With our application, you can exchange currencies. You can also check the
                         amount
                         you have spent in real time.</p>
+                        <button class="btn"><a href="#">learn more</a></button>
                 </div>
-                <button class="btn"><a href="#">learn more</a></button>
 
             </div>
         </section>
@@ -144,11 +144,13 @@
                 <div class="img">
                     <img src="img/apply.jpg" alt="photo">
                 </div>
+                <div class="input-form">
                 <h2 class="form-head">
                     Enter your email address and click the button.
                 </h2>
                 <input class="mail" type="email">
                 <submit class="btn">get a card</submit>
+            </div>
             </div>
         </section>
         <footer id="contact">
