--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div class="wrap">
         <header>
             <div class="hero container">
-                <h1 class="head-title">Debit Cards for the Real Minimalist</h1>
-                <p class="head-p">With this one card, you can pay whenever and wherever you want.</p>
-                <img class="card-img" src="img/hero1.png" alt="debit card photo">
-                <button class="btn"><a href="#apply">get a card</a></button>
+                <h1 class="head-title appear">Debit Cards for the Real Minimalist</h1>
+                <p class="head-p appear">With this one card, you can pay whenever and wherever you want.</p>
+                <img class="card-img appear" src="img/hero1.png" alt="debit card photo">
+                <button class="btn appear"><a href="#apply">get a card</a></button>
             </div>
         </header>
 
@@ -57,9 +57,9 @@
             </div>
             <div class="left">
                 <div class="img">
-                    <img src="img/feature1.jpg" alt="photo">
+                    <img class="appear" src="img/feature1.jpg" alt="photo">
                 </div>
-                <div class="text">
+                <div class="text appear">
                     <h2 class="feature-head">
                         No currency exchange fees when used overseas.
                     </h2>
@@ -70,10 +70,10 @@
             </div>
             <div class="right">
                 <div class="img">
-                    <img src="img/feature2.jpg" alt="photo">
+                    <img class="appear" src="img/feature2.jpg" alt="photo">
                     <p>designed by freepik.com</p>
                 </div>
-                <div class="text">
+                <div class="text appear">
                     <h2 class="feature-head">
                         Applications that make it easy to manage your money </h2>
                     <p class="feature-p">With our application, you can exchange currencies. You can also check the
@@ -90,7 +90,7 @@
                 <div class="title-line"></div>
             </div>
             <div class="cards">
-                <div class="card">
+                <div class="card appear">
                     <div class="bg">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24"
                             width="24px" fill="#000000">
@@ -104,7 +104,7 @@
                         Register your email address and fill out the application form.
                     </p>
                 </div>
-                <div class="card">
+                <div class="card appear">
                     <div class="bg">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24"
                             width="24px" fill="#000000">
@@ -119,7 +119,7 @@
                         from e-transfor or from your credit card.
                     </p>
                 </div>
-                <div class="card">
+                <div class="card appear">
                     <div class="bg">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24"
                             width="24px" fill="#000000">
@@ -142,9 +142,9 @@
             </div>
             <div class="get-card">
                 <div class="img">
-                    <img src="img/apply.jpg" alt="photo">
+                    <img class="appear" src="img/apply.jpg" alt="photo">
                 </div>
-                <div class="input-form">
+                <div class="input-form appear">
                 <h2 class="form-head">
                     Enter your email address and click the button.
                 </h2>
@@ -155,7 +155,7 @@
         </section>
         <footer id="contact">
             <div class="container">
-                <h1 class="logo">minimalist debit</h1>
+                <h1 class="logo appear">minimalist debit</h1>
                 <h3 class="footer-p">Debit Cards for the World's Minimalists</h3>
                 <button class="btn"><a href="#form">let's get started</a></button>
                 <div class="social">
